--- a/ProjetoCharles/cadastro.html
+++ b/ProjetoCharles/cadastro.html
@@ -64,7 +64,7 @@
                     <span class="span-required">E-mail dever conter @.com</span>
                     <input type="password" class="campo required" id="senha" name="senha" placeholder="Senha:" required oninput="senhavalidate()">
                     <span class="span-required">Senha deve conter no minimo 6 caracteres</span>
-                    <input type="password" class="campo required" id="comfirmar-senha" name="senha" placeholder=" comfirme a Senha:" required oninput="senhaconfirmation()">
+                    <input type="password" class="campo required" id="confirmar-senha" name="senha" placeholder=" comfirme a Senha:" required oninput="senhaconfirmation()">
                     <span class="span-required">Senhas não coincidem</span>
                     
                     <input type="textarea" class="campo" id="endereço" name="endereco" placeholder="Endereço completo:" required>
